<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".ProductDialogFragment">


    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/new_product_dialog_header"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/productNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_product_dialog_label_product" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/productNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/textInputLayout">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:hint="@string/new_product_dialog_hint_product"
            android:maxLength="15"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/productExpiryLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_product_dialog_label_expiration" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/productExpiryInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/textInputLayout">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:hint="@string/new_product_dialog_hint_expiration"
            android:inputType="numberSigned"
            android:maxLength="9"
            android:focusable="false"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/dialogButtonPositive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="50dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_check_black_48" />

        <ImageButton
            android:id="@+id/dialogButtonNegative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_clear_black_48" />
    </LinearLayout>

</LinearLayout>